# wingpanel-indicator-studio-display-brightness

./: .gitignore  README.md  install.sh  meson.build
.github/workflows/: deb.yml
data/: 20-asd-backlight.rules
debian/: changelog  control  copyright  postinst  rules
src/: Asdbctl.vala  BrightnessController.vala  DisplayMonitor.vala  Indicator.vala  meson.build
